[package]
name = "bodegas"
version = "0.9.0"
authors = ["Elias Puma <elpumitaelias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rayon = "1.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
